--- a/DesignerRHN/DesignerRHN-war/web/motivocambiosueldo.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/motivocambiosueldo.xhtml
@@ -104,10 +104,18 @@
                                 <p:commandButton id="rastro" value="" style="background-image: url(Imagenes/rastro.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlMotivosCambiosSueldos.verificarRastro()}" process="@this"/>  
                                 <p:tooltip style="" for="rastro" value="Rastro"/>
 
+                                <p:separator style="position: relative; top: -9px"/>
+
+                                <p:commandButton id="refrescar" value="" style="background-image: url(Imagenes/refrescar.png); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px " actionListener="#{controlMotivosCambiosSueldos.cancelarModificacion()}" process="@this"/>  
+                                <p:tooltip  for="refrescar" value="Refrescar"/>
+
+                                <p:commandButton id="salir" value="" style="background-image: url(Imagenes/salir.png); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px "  process="@this"/>  
+                                <p:tooltip  for="salir" value="Salir"/>
+
                             </p:toolbarGroup>  
                         </p:toolbar>
 
-                        <p:commandButton style=" position: absolute; left: 15px; top: 470px; " icon="ui-icon-refresh" id="REFRESCAR"  actionListener="#{controlMotivosCambiosSueldos.cancelarModificacion()}" value="Refrescar" process="@this" />
+                        <h:outputText id="informacionRegistro" value="#{controlMotivosCambiosSueldos.infoRegistro}" style="position: absolute; left: 15px; top: 475px; font-weight: bold"/>
                         <p:commandButton style=" position: absolute; left: 688px; top: 470px;" icon="ui-icon-check" id="ACEPTAR" value="Aceptar"  onclick="confirmarGuardar.show();" disabled="#{controlMotivosCambiosSueldos.guardado}" update="datosMotivoCambioSueldo"  process="@this"   />
                         <p:commandButton style=" position: absolute; left: 785px; top: 470px;" icon="ui-icon-arrowreturnthick-1-w" id="ATRAS" value="Atras"    />
 
@@ -223,22 +231,22 @@
 
                         <p:panel id="nuevoMotivoCambioSueldo" style="border: none;">
 
-                            <strong><h:outputText value="Código: "  style="left: 10px; position: absolute; top: 60px;text-transform: uppercase" /></strong>
-                            <p:inputText id="nuevoCodigo" value="#{controlMotivosCambiosSueldos.nuevoMotivoCambioSueldo.codigo}" style=" width: 135px; position: absolute; left: 150px; top: 55px;">
+                            <strong><h:outputText value="*Código: "  style="left: 10px; position: absolute; top: 60px" /></strong>
+                            <p:inputText id="nuevoCodigo" value="#{controlMotivosCambiosSueldos.nuevoMotivoCambioSueldo.codigo}" style="text-transform: uppercase ; width: 135px; position: absolute; left: 150px; top: 55px;">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoCodigo" value="Código" />
 
-                            <strong><h:outputText value="Descripción: "  style="left: 10px; position: absolute; top: 90px;text-transform: uppercase" /></strong>
-                            <p:inputText  id="nuevoNombre" value="#{controlMotivosCambiosSueldos.nuevoMotivoCambioSueldo.nombre}" style=" width: 135px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
+                            <strong><h:outputText value="*Descripción: "  style="left: 10px; position: absolute; top: 90px" /></strong>
+                            <p:inputText  id="nuevoNombre" value="#{controlMotivosCambiosSueldos.nuevoMotivoCambioSueldo.nombre}" style="text-transform: uppercase ; width: 135px; position: absolute; left: 150px; top: 85px;text-transform: uppercase">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="nuevoNombre" value="Descripción" />
 
 
 
-                            <strong><h:outputText value="Sueldo Promedio: "  style="left: 10px; position: absolute; top: 120px;text-transform: uppercase" /></strong>
-                            <p:selectBooleanCheckbox id="nuevoSueldo" value="#{controlMotivosCambiosSueldos.nuevoMotivoCambioSueldo.estadoSueldoPromedio}" style=" width: 135px; position: absolute; left: 150px; top: 120px;">  
+                            <strong><h:outputText value="Sueldo Promedio: "  style="left: 10px; position: absolute; top: 120px" /></strong>
+                            <p:selectBooleanCheckbox id="nuevoSueldo" value="#{controlMotivosCambiosSueldos.nuevoMotivoCambioSueldo.estadoSueldoPromedio}" style="text-transform: uppercase ; width: 135px; position: absolute; left: 150px; top: 120px;">  
                                 <p:ajax update="@this"/>
                             </p:selectBooleanCheckbox>
 
@@ -255,13 +263,13 @@
 
                         <p:panel id="duplicarMotivosCambiosSueldos" style="border: none;">
                             <strong><h:outputText value="código "  style="left: 10px; position: absolute; top: 60px;text-transform: uppercase" /></strong>
-                            <p:inputText id="duplicarCodigo" value="#{controlMotivosCambiosSueldos.duplicarMotivoCambioSueldo.codigo}" style=" width: 135px; position: absolute; left: 150px; top: 55px;">
+                            <p:inputText id="duplicarCodigo" value="#{controlMotivosCambiosSueldos.duplicarMotivoCambioSueldo.codigo}" style="text-transform: uppercase ;width: 135px; position: absolute; left: 150px; top: 55px;">
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarCodigo" value="Código" />
 
-                            <strong><h:outputText value="Descripción"  style="left: 10px; position: absolute; top: 90px;text-transform: uppercase" /></strong>
-                            <p:inputText id="duplicarNombre" value="#{controlMotivosCambiosSueldos.duplicarMotivoCambioSueldo.nombre}"  style=" width: 135px; position: absolute; left: 150px; top: 85px;" >
+                            <strong><h:outputText value="*Descripción:"  style="left: 10px; position: absolute; top: 90px" /></strong>
+                            <p:inputText id="duplicarNombre" value="#{controlMotivosCambiosSueldos.duplicarMotivoCambioSueldo.nombre}"  style="text-transform: uppercase ; width: 135px; position: absolute; left: 150px; top: 85px;" >
                                 <p:ajax event="change" update="@this"/>
                             </p:inputText>
                             <p:watermark for="duplicarNombre" value="Descripción" />
